Changed /auth to /users Added first draft of swaggerdoc to users.js route, this to see where it fits best, routes or controllers.
