# swagger-output.json
@@ -11,7 +11,7 @@
     }
   ],
   "paths": {
-    "/auth/signup": {
+    "/users/register": {
       "post": {
         "description": "",
         "parameters": [],
@@ -48,7 +48,7 @@
         }
       }
     },
-    "/auth/login": {
+    "/users/login": {
       "post": {
         "description": "",
         "parameters": [],
